tests/local/missing-features/reference-types/v128-without-simd-feature.wast
(assert_invalid
  (module (func select (result v128)))
  "SIMD support is not enabled")
